# bimaru

./: Cargo.toml  Dockerfile  Makefile
src/: main.rs  setups.rs  templates.rs
