[package]
name = "bimaru"
version = "0.1.0"
edition = "2021"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tide = "0.16.0"
async-std = { version = "1.12.0", features = ["attributes"] }
serde = { version = "1.0", features = ["derive"] }
uuid = {version = "1.1.2", features = ["v4", "serde", "macro-diagnostics", "fast-rng"]}
serde_yaml = "0.9.4"
im = "15.1.0"
itertools = "0.10.3"
string-builder = "0.2.0"

[dev-dependencies]
test-case = "2.2.1"
tide-testing = "0.1.3"
